--- a/sass/sections/our-projects.scss
+++ b/sass/sections/our-projects.scss
@@ -74,3 +74,7 @@ z-index: 3;
         display: none;
     }
 }
+
+.swiper-grid>.swiper-wrapper{
+    flex-wrap: nowrap !important;
+}
